[package]
name = "pallet-babe"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Consensus extension module for BABE consensus. Collects on-chain randomness from VRF outputs and manages epoch transitions."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { package = "parity-scale-codec", workspace = true }
log = { workspace = true }
scale-info = { workspace = true }
frame-benchmarking = { workspace = true, optional = true}
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-authorship = { workspace = true }
pallet-session = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-staking = { workspace = true }
sp-application-crypto = {workspace = true }
sp-consensus-babe = { workspace = true }
sp-consensus-vrf = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
frame-election-provider-support = { workspace = true }
pallet-balances = { workspace = true }
pallet-offences = { workspace = true }
pallet-staking-reward-curve = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-consensus-babe/std",
	"sp-consensus-vrf/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]