[package]
name = "sc-consensus-babe"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "BABE consensus algorithm for substrate"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-consensus-babe"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1.57"
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive"] }
futures = "0.3.21"
log = "0.4.17"
merlin = "2.0"
num-bigint = "0.4.3"
num-rational = "0.4.1"
num-traits = "0.2.8"
parking_lot = "0.12.1"
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated"] }
thiserror = "1.0"
fork-tree = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }


prometheus-endpoint = { package = "substrate-prometheus-endpoint", workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-epochs = { workspace = true }
sc-consensus-slots = { workspace = true }
sc-keystore = { workspace = true }
sc-telemetry = { workspace = true }
sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-consensus-slots = { workspace = true }
sp-consensus-vrf = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
rand_chacha = "0.2.2"
sc-block-builder = { workspace = true } 
sp-keyring = { workspace = true }
sc-network = { workspace = true }
sc-network-test = { workspace = true }
sp-timestamp = { workspace = true }
sp-tracing = { workspace = true }
substrate-test-runtime-client = { workspace = true }
tokio = "1.22.0"
