[package]
name = "sp-consensus-babe"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitives for BABE consensus"
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true, optional = true }
scale-codec = { package = "parity-scale-codec", workspace = true }
merlin = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-consensus = { workspace = true, optional = true }
sp-consensus-slots = { workspace = true }
sp-consensus-vrf = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-keystore = { workspace = true, optional = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-timestamp = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
	"async-trait",
	"scale-codec/std",
	"merlin/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-consensus",
	"sp-consensus-slots/std",
	"sp-consensus-vrf/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-keystore",
	"sp-runtime/std",
	"sp-std/std",
	"sp-timestamp",
]