[package]
name = "sc-consensus-babe-rpc"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "RPC extensions for the BABE consensus algorithm"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0"
sc-consensus-babe = { workspace = true }
sc-consensus-epochs = { workspace = true }
sc-rpc-api = { workspace = true }
sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
serde_json = "1.0.85"
tempfile = "3.1.0"
tokio = "1.22.0"
sc-consensus = { workspace = true }
sc-keystore = { workspace = true }
sp-keyring = { workspace = true }
substrate-test-runtime-client = { workspace = true }
